# test_processica

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: e68b5514af54_initial.py
src/: config.py  main.py
src/api/dependencies/: database.py  services.py
src/api/routes/: __init__.py  addresses.py  health.py
src/core/: enums.py  exceptions.py
src/db/: session.py
src/db/models/: address.py
src/repositories/: address_repository.py  base.py
src/schemas/: address.py  common.py
src/services/: address_service.py  shipengine_client.py
src/workers/: settings.py  tasks.py
tests/: __init__.py  conftest.py  constants.py
tests/factories/: address_factory.py
tests/integration/: conftest.py  test_addresses_api.py
tests/unit/: test_address_service.py  test_shipengine_client.py  test_workers.py
